samples/_failures_safe/1761795357_18b999_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_902f0acf.c: In function ‘main’:
./samples/SAFE/__tmp_902f0acf.c:154:12: error: missing terminating " character
  154 |     printf("Enter source node for shortest path:
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_902f0acf.c:154:5: error: expected expression at end of input
  154 |     printf("Enter source node for shortest path:
      |     ^~~~~~
./samples/SAFE/__tmp_902f0acf.c:154:5: error: expected declaration or statement at end of input
